# Compiler

./: .gitignore  ChangeLog.md  README.md  compiler.cabal  package.yaml  stack.yaml
app/: Main.hs
dev/CGIR/GLSL/Internal/: AST.hs
dev/Dev/: Types.hs
dev/Dev/HelmSamples/: CPU.hs  GPU.hs
dev/Dev/Samples/: Basic.hs  Complex.hs  Legacy.hs  TestParser.hs
dev/DevKit/Sample/Loader/: CPU.hs  GPU.hs
dev/HLIR/HelmFlat/AST/Utils/: Scope.hs
dev/HLIR/HelmFlat/Core/Index/: Dev.hs
dev/HLIR/HelmFlat/Data/: Interface.hs
dev/HelmFlat/Core/Index/: Data.hs  Driver.hs  Syntax.hs
dev/HelmFlat/Core/Ordering/: Driver.hs  Syntax.hs
dev/HelmFlat/Core/TypeCheck/: Driver.hs
etc/resources/dev-project/src/: Platform.helm
etc/resources/dev-samples/cpu/: Alpha.helm  Beta.helm  Gamma.helm
etc/resources/dev-samples/gpu/: Alpha.helm
etc/resources/samples/dev-project/: helm-manifest.toml
etc/resources/samples/test-parser/: One.helm  Three.helm  Two.helm
etc/resources/samples/test-singletons/: One.helm
etc/runtime-log/: module-network-ordered.dot  module-network.dot  modules.dot  serial-compile-order.dot
libs/helm-backend/HLIR/HelmCore/: Core.hs
libs/helm-backend/HLIR/HelmOutro/: Core.hs
libs/helm-backend/LLIR/LightRoast/: Core.hs
libs/helm-core/HLIR/HelmIntro/: Core.hs
libs/helm-frontend/SLIR/HelmSyntax/: Core.hs
libs/prelude-hs/: Core.hs
libs/prelude-hs/Core/: Utils.hs
libs/prelude-hs/Core/Control/: Flow.hs
libs/prelude-hs/Core/Either/: Util.hs
libs/prelude-hs/Core/List/: Util.hs
libs/prelude-hs/Core/Text/: Util.hs
libs/prelude-hs/Framework/Text/: Parser.hs  Renderer.hs
libs/prelude-hs/Proto/: Class.hs  Data.hs  Util.hs
libs/prelude-hs/Proto/System/: Console.hs
libs/prelude-hs/Proto/Util/: List.hs  Misc.hs  Text.hs
libs/system/Framework/: Parser.hs  Render.hs
libs/system/Framework/Parser/: Prelude.hs
libs/system/Framework/Pipeline/: Data.hs
libs/system/Framework/Render/: Display.hs  Utils.hs
notes/IR-examples/: HelmSyntax.md
notes/high-level/: Organization.md
resources/HelmSamples/CPU/: Main.txt
resources/HelmSamples/GPU/: Main.txt
resources/Samples/Basic/: Evaluation.txt  Types.txt
resources/Samples/Complex/: SystemOne.txt
resources/Samples/Legacy/: One.txt
resources/Samples/TC/: One.txt
resources/Samples/TestParser/: One.txt  Three.txt  Two.txt
resources/Testbed/: deps.dot  eval-order.dot  helm-package.json  parallel-eval-order.dot
resources/Testbed/Prelude/: Core.elm
resources/Testbed/src/app/: Main.helm
resources/Testbed/src/prelude/: Core.helm  List.helm  Tmp.helm
resources/notes/: Misc.txt  TC.txt
src/CGIR/GLSL/Data/: Interface.hs
src/CGIR/GLSL/Dev/: DryRun.hs
src/CGIR/GLSL/Internal/: AST.hs
src/CGIR/Rust/: Pipeline.hs
src/CGIR/Rust/Data/: Interface.hs
src/CGIR/Rust/Dev/: DryRun.hs
src/CGIR/Rust/Internal/: AST.hs
src/CGIR/RustCG/: Pipeline.hs
src/CGIR/RustCG/Data/: Interface.hs
src/CGIR/RustCG/Dev/: DryRun.hs
src/CGIR/RustCG/Internal/: AST.hs
src/GCIR/RustCG/: Pipeline.hs
src/GCIR/RustCG/Data/: Interface.hs
src/GCIR/RustCG/Dev/: DryRun.hs
src/GCIR/RustCG/Internal/: AST.hs
src/HLIR/HelmFlat/: Pipeline.hs
src/HLIR/HelmFlat/Data/: Interface.hs
src/HLIR/HelmFlat/Dev/: DryRun.hs
src/HLIR/HelmFlat/Internal/: AST.hs
src/LLIR/Cmm/Internal/: AST.hs
src/LLIR/HelmLL/: Pipeline.hs
src/LLIR/HelmLL/Data/: Interface.hs
src/LLIR/HelmLL/Internal/: AST.hs
src/LLIR/SPMD/Data/: Interface.hs
src/LLIR/SPMD/Dev/: DryRun.hs
src/LLIR/SPMD/Internal/: AST.hs
src/SLIR/HelmSyntax/: Pipeline.hs
src/SLIR/HelmSyntax/Dev/: DryRun.hs
src/SLIR/HelmSyntax/Internal/: AST.hs
(+1823 files in other folders)
