name:                compiler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/compiler#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:    libs/prelude-hs
                     , libs/helm-frontend
                     , libs/helm-backend
                     , libs/helm-system
                     , libs/rust
                     , libs/metal
                     , libs/system
                     , dev

    build-depends:     base >=4.2 && <5
                     , aeson >= 0.11
                     , aeson-pretty < 0.8
                     , ansi-terminal >= 0.6.2.1 && < 0.7
                     , ansi-wl-pprint >= 0.6.7 && < 0.7
                     , bytestring >= 0.9 && < 0.11
                     , containers >= 0.3 && < 0.6
                     , directory >= 1.0 && < 2.0
                     , edit-distance >= 0.2 && < 0.3
                     , filepath >= 1 && < 2.0
                     , mtl >= 2.2 && < 3
                     , pretty >= 1.0 && < 2.0
                     , process
                     , text >= 1 && < 2
                     , union-find >= 0.2 && < 0.3
                     , llvm-hs-pure
                     , llvm-hs
                     , binary
                     
                     -- late add?
                     , semigroups
                     
                     , ghc-prim
                     
                     , megaparsec
                     , transformers
                     
                     , QuickCheck
                     
                     , constraints
                     
                     , uniplate
                     , lens
                     , show-prettyprint
                     , wl-pprint-text
                     
                     , hoopl
                     , ilist
                     , unordered-containers
                     
                     , bound
                     , unbound-generics
                     , derive
                     
                     , mmorph
                     , recursion-schemes
                       
    exposed-modules:
        SLIR.HelmSyntax.Core.TypeCheck'.Dev
    

    default-language:    Haskell2010




executable app
    hs-source-dirs:      app
    main-is:             Main.hs

    ghc-options:         -threaded -rtsopts -with-rtsopts=-N
    build-depends:       base
                     , compiler
                     , aeson >= 0.11
                     , aeson-pretty < 0.8
                     , ansi-terminal >= 0.6.2.1 && < 0.7
                     , ansi-wl-pprint >= 0.6.7 && < 0.7
                     , bytestring >= 0.9 && < 0.11
                     , containers >= 0.3 && < 0.6
                     , directory >= 1.0 && < 2.0
                     , edit-distance >= 0.2 && < 0.3
                     , filemanip >= 0.3.5 && < 0.4
                     , filepath >= 1 && < 2.0
                     , language-glsl >= 0.0.2 && < 0.3
                     , mtl >= 2.2 && < 3
                     , parsec
                     , pretty >= 1.0 && < 2.0
                     , process
                     , text >= 1 && < 2
                     , union-find >= 0.2 && < 0.3
    default-language:    Haskell2010
